# netifd

./: .gitignore  CMakeLists.txt  DESIGN  alias.c  bonding.c  bridge.c  config.c  config.h  device.c  device.h  extdev.c  extdev.h  handler.c  handler.h  interface-event.c  interface-hotplug.c  interface-ip.c  interface-ip.h  interface.c  interface.h  iprule.c  iprule.h  macvlan.c  main.c  make_ethtool_modes_h.sh  netifd.h  port-split.c  port-split.h  proto-ext.c  proto-ext.h  proto-shell.c  proto-static.c  proto-ucode.c  proto-ucode.h  proto.c  proto.h  system-dummy.c  system-linux.c  system-log.h  system.c  (+14 more)
config/: board.json  network  wireless
dummy/: netifd-proto.sh
dummy/proto/: netifd-proto.sh  ppp.sh  pptp.sh
examples/: ethtool-tunables-network-config.md  main.uc  wireless-device.uc  wireless.uc
examples/proto/: example.uc  ppp.sh  pptp.sh
examples/wireless/: mac80211.sh
package/network/config/netifd/patches/: 001-system-linux-add-interface-protocol.patch
proto/: netifd-proto.sh  ppp.sh
scripts/: ifup  netifd-proto.sh  netifd-wireless.sh  utils.sh
